<resources>
    <string name="app_name">Minha Passagem</string>
    <string name="hintText">Como funciona?</string>
    <string name="hintLink">Clique aqui.</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="valorPass">Valor da Passagem:</string>
    <string name="quantPass">Passagens por Dia:</string>
    <string name="alert_personalized">Nesta tela você pode escolher separadamente quantas passagens gasta em cada dia da semana</string>
    <string name="alertsaldorest">Nesta tela você consegue ver quantas passagens lhe restam,
     informando quanto possui no cartão de transporte.</string>
    <string name="diasuteis">Aqui você pode ver quanto precisa recarregar no cartão de transporte
    até o fim deste mês contando com o seu saldo atual</string>
    <string name="sabDiautil">Nesta tela você pode verificar quanto precisa recarregar até o
        final do mês a partir do dia seguinte, adicionando o Sábado como dia útil.</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="logo">logo</string>
    <string name="passagens">Passagens...</string>
    <string name="valor">Valor...</string>
    <string name="valPass">Informe o Valor da passagem:</string>
    <string name="quantPassS">Quantas passagens por semana:</string>
    <string name="minha_passagem">MINHA PASSAGEM</string>
    <string name="valor_no_cart_o">Valor no cartão...</string>
    <string name="errorWarning">Preencha este campo</string>
    <string name="VersaoApp">Versão de teste 0.9.45.2</string>
    <string name="appVersion">0.9.45.2</string>
    <string name="Created">Criado por Pedro Mattos</string>
    <string name="EmailContact">E-mail para contato: peoplesolutionsdev@gmail.com</string>
    <string name="unitpass">Insira o valor da passagem unitária:</string>
    <string name="passperdia">Insira quantas passagens usa em um dia:</string>
    <string name="cardSald">Insira quanto possui no seu cartão de transporte:</string>
    <string name="save">Salvar</string>
    <string name="prefs">Preferências</string>
    <string name="conferir">Conferir dados</string>
    <string name="unipass">Valor da passagem unitária:</string>
    <string name="quantPassus">Quantidade de passagens:</string>
    <string name="saldo">Saldo no cartão:</string>
    <string name="prefsPass">Preferências de passagem:</string>
    <string name="logo_topo">logo topo</string>
    <string name="contador_de_passagens">Contador de passagens:</string>
    <string name="btnPerson">Personalizado (Em construção)</string>
    <string name="btnSaldo">Calcular pelo saldo restante</string>
    <string name="btnSabado">Sábado como dia útil</string>
    <string name="btnDias">Calcular por dias úteis</string>
    <string name="maintence">Opa! Não há nada para ver aqui, acesso restrito apenas à funcionários. Em manutenção!</string>
    <string name="duvidas_sugest">Dúvidas e sugestões: peoplesolutionsdev@gmail.com</string>
    <string name="textBugReport">Teve algum problema com a aplicação? Não se desespere! Descreva o erro encontrado e nos envie para que possamos trabalhar na sua correção</string>
    <string name="toReport">Reportar um bug</string>
    <string name="titleBug">Título</string>
    <string name="t_tulo">Título...</string>
    <string name="descri_o">Descrição</string>
    <string name="descBug">Descrição...</string>
    <string name="enviar">enviar</string>
    <string name="sendPrint">Enviar uma caputra de tela</string>
    <string name="obrigatoryFiled">Campo obrigatório!</string>
    <string name="bugReport">Reportar Bugs</string>
    <string name="aviso">Olá! Se você está lendo essa mensagem é porque está com a versão mais recente do Minha Passagem. Por favor não esqueça de atualizar seus dados de usuário!</string>
    <string name="importante">Importante!</string>
    <string name="please">Por favor vá em Preferências e atualize seus dados</string>
    <string name="ahead">Atenção! Obras à frente</string>
    <string name="seg">Segunda</string>
    <string name="ter">Terça</string>
    <string name="qua">Quarta</string>
    <string name="qui">Quinta</string>
    <string name="sex">Sexta</string>
    <string name="sab">Sábado</string>
    <string name="infoPass">Informe quantas passagens por dia:</string>
    <string name="saldo_restante">Saldo restante:</string>
    <string name="dom">Domingo</string>
</resources>
