<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".BugReport">
    <include layout="@layout/tool_bar"/>
    <ImageView
        android:id="@+id/infoAplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/web_hi_res_512"
        android:visibility="gone"/>
    <ScrollView
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/TextColorButton"
                android:textAlignment="center"
                android:textSize="@dimen/TitleSuper"
                android:text="@string/toReport" />
            <TextView
                android:id="@+id/inputTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/MediumTitle"
                android:layout_marginTop="10dp"
                android:textColor="@color/TextColorButton"
                android:text="@string/titleBug" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/titleBug"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/shape_edittext"
                    android:hint="@string/t_tulo"
                    android:elevation="@dimen/Elevation"
                    android:inputType="text"
                    android:maxLength="20"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/inputDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/MediumTitle"
                android:textColor="@color/TextColorButton"
                android:layout_marginTop="10dp"
                android:text="@string/descri_o" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutEditBug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/msgBug"
                    android:layout_width="345dp"
                    android:layout_height="300dp"
                    android:padding="5dp"
                    android:background="@drawable/shape_edittext"
                    android:hint="@string/descBug"
                    android:gravity="start"
                    android:inputType="text"
                    android:maxLength="300"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <android.support.design.button.MaterialButton
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/Buttons"
                    style="@style/RaisedButton"
                    android:text="@string/enviar" />
                <android.support.design.button.MaterialButton
                    android:id="@+id/btnSendImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/Buttons"
                    style="@style/RaisedButton2"
                    android:text="@string/sendPrint" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>