<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:elevation="@dimen/Elevation"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".Preferencias">
    <include layout="@layout/tool_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginVertical="50dp"
            android:padding="16dp">
            <TextView
                android:id="@+id/prefs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/prefs"
                android:textColor="@color/TextColorButton"
                android:textSize="@dimen/TitleSuper"/>
            <TextView
                android:id="@+id/textV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unitpass"
                android:textColor="@color/TextColorButton"
                android:textSize="@dimen/TitleDimen"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEditV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/passValue"
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/shape_edittext"
                    android:hint="@string/valor"
                    android:padding="5dp"
                    android:inputType="numberDecimal"
                    android:elevation="@dimen/Elevation"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/textQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardSald"
                android:textColor="@color/TextColorButton"
                android:textSize="@dimen/TitleDimen"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEditP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/valPass"
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/shape_edittext"
                        android:hint="@string/valor_no_cart_o"
                        android:padding="5dp"
                        android:inputType="numberDecimal"
                        android:elevation="@dimen/Elevation"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passperdia"
                android:textColor="@color/TextColorButton"
                android:textSize="@dimen/TitleDimen"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEditQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/passQuant"
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/shape_edittext"
                        android:hint="@string/passagens"
                        android:padding="5dp"
                        android:inputType="numberDecimal"
                        android:elevation="@dimen/Elevation"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                android:id="@+id/botaoSalvar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Buttons"
                android:fontFamily="monospace"
                android:elevation="@dimen/Elevation"
                style="@style/RaisedButton"
                android:layout_gravity="center"
                android:text="@string/save"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/visuPrefs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/Buttons"
                    android:fontFamily="monospace"
                    android:elevation="@dimen/Elevation"
                    style="@style/RaisedButton2"
                    android:layout_gravity="center"
                    android:text="@string/conferir"/>
                <ImageView
                    android:id="@+id/erase"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/exclude" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>