<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".Personalized">
    <include layout="@layout/tool_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/web_hi_res_512" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:padding="16dp">
                <Switch
                    android:id="@+id/prefsAtiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ativar preferências"
                    android:textAlignment="center"
                    android:textColor="@color/TextColorButton"
                    android:textSize="@dimen/TitleDimen" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/infoPass"
                        android:textColor="@color/TextColorButton"
                        android:textSize="@dimen/TitleDimen"/>
                    <Button
                        android:id="@+id/dropDown"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="11dp"
                        android:background="@drawable/dropdown"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="4dp">
                    <HorizontalScrollView
                        android:id="@+id/scrollContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <android.support.design.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dom"
                                style="@style/ButtonSolid"
                                android:textColor="@color/TextStyleLight"/>
                            <android.support.design.button.MaterialButton
                                android:id="@+id/seg"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/seg"
                                style="@style/ButtonSolid"
                                android:textColor="@color/TextStyleLight"/>
                            <android.support.design.button.MaterialButton
                                android:id="@+id/ter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ter"
                                style="@style/ButtonSolid"
                                android:textColor="@color/TextStyleLight"/>
                            <android.support.design.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/qua"
                                style="@style/ButtonSolid"
                                android:textColor="@color/TextStyleLight"/>
                            <android.support.design.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/qui"
                                style="@style/ButtonSolid"
                                android:textColor="@color/TextStyleLight"/>
                            <android.support.design.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sex"
                                style="@style/ButtonSolid"
                                android:textColor="@color/TextStyleLight"/>
                            <android.support.design.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sab"
                                style="@style/ButtonSolid"
                                android:textColor="@color/TextStyleLight"/>
                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>
                <TextView
                    android:id="@+id/howPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/valPass"
                    android:textColor="@color/TextColorButton"
                    android:textSize="@dimen/TitleDimen" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEditV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/Elevation"
                    android:layout_marginTop="5dp">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/passValue"
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/shape_edittext"
                        android:hint="@string/valor"
                        android:elevation="@dimen/Elevation"
                        android:inputType="numberDecimal"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                <android.support.design.button.MaterialButton
                    android:id="@+id/buttonCalc"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/Buttons"
                    android:elevation="@dimen/Elevation"
                    style="@style/RaisedButton2"
                    android:text="@string/calcular"/>
            </LinearLayout>
                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/TextColorButton"
                    android:textSize="@dimen/TitleDimen" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.widget.LinearLayout>