<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:elevation="@dimen/Elevation"
    android:layout_height="match_parent"
    tools:context=".InfoApplication">
    <include layout="@layout/tool_bar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="50dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/TitleSuper"
                    android:text="@string/app_name"
                    android:textColor="@color/TextStyleLight"/>
                <TextView
                    android:id="@+id/text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/TitleDimen"
                    android:text="@string/VersaoApp"
                    style="@style/Base.TextAppearance.AppCompat.Medium.Inverse"/>
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@mipmap/web_hi_res_512"
                        android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/email"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mini_text"
                    android:text="@string/EmailContact"
                    style="@style/Base.TextAppearance.AppCompat.Medium.Inverse"/>
                <TextView
                    android:id="@+id/vers"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mini_text"
                    android:text="@string/Created"
                    style="@style/Base.TextAppearance.AppCompat.Medium.Inverse"/>
    </LinearLayout>
</LinearLayout>