<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/menus"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MenuDirect">

    <include layout="@layout/tool_bar"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@mipmap/web_hi_res_512" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/TitleDimen"
                    android:textColor="@color/TextStyleLight"
                    android:text="@string/saldo_restante" />
                <TextView
                    android:id="@+id/cartSald"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text=""
                    android:textSize="@dimen/TitleDimen"
                    style="@style/Base.TextAppearance.AppCompat.Medium.Inverse" />
            </LinearLayout>
            <android.support.design.button.MaterialButton
                android:id="@+id/CalcdUtl"
                android:layout_width="280dp"
                android:layout_height="65dp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:elevation="@dimen/Elevation"
                style="@style/RaisedButton2"
                android:textSize="@dimen/button_menu"
                android:text="@string/btnDias" />
            <android.support.design.button.MaterialButton
                android:id="@+id/SatdUtl"
                android:layout_width="280dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:elevation="@dimen/Elevation"
                android:layout_gravity="center"
                android:textSize="@dimen/button_menu"
                style="@style/RaisedButton2"
                android:text="@string/btnSabado" />
            <android.support.design.button.MaterialButton
                android:id="@+id/CalcsRest"
                android:layout_width="280dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:elevation="@dimen/Elevation"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/button_menu"
                android:text="@string/btnSaldo"
                style="@style/RaisedButton2"/>
            <android.support.design.button.MaterialButton
                android:id="@+id/CalcdRest"
                android:layout_width="280dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:elevation="@dimen/Elevation"
                style="@style/RaisedButton2"
                android:textSize="@dimen/button_menu"
                android:text="@string/btnPerson" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>



</RelativeLayout>